// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component should match the snapshot with columns 1`] = `
<div
  className="Col--12"
>
  Primary
</div>
`;

exports[`Column component should match the snapshot without columns 1`] = `
<div
  className="Col"
>
  Primary
</div>
`;
